[package]
name = "von_neumann"
version = "0.1.0"
edition = "2021"
authors = ["Jeremy Daugherty <Jeremy.Daug@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# piston = "1.0.0"
# piston2d-graphics = "0.44.0"
# piston2d-opengl_graphics = "0.85.0"
iced = "0.12.0"
iced_wgpu = "0.12.1"
itertools = "0.13.0"
# piston_window = "0.132.0"